--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,30 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: windows-latest
-    timeout-minutes: 15
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Setup Node.js with npm 9 (needed for lockfileVersion: 3)
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-
-      - name: Install JS deps
-        run: npm ci
-        env:
-          CI: true
-
-      - name: Run JS unit tests
-        run: npm test
-
-      - name: Setup .NET
+      - name: Setup .NET 9 SDK
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
@@ -39,13 +22,21 @@ jobs:
         run: dotnet restore SpaceInvaders.sln
 
       - name: Build
-        run: dotnet build SpaceInvaders.sln -c Release --no-restore
+        run: dotnet build SpaceInvaders.sln --configuration Release --no-restore
 
-      - name: Publish Web (artifact)
-        run: dotnet publish SpaceInvaders.Web/SpaceInvaders.Web.csproj -c Release -o out
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          name: SpaceInvaders.Web-publish
-          path: out
+          node-version: '20'
+
+      - name: Install JS deps
+        run: npm ci
+
+      - name: Run JS unit tests (Vitest)
+        run: npm test --silent
+
+      - name: Publish SpaceInvaders.Web
+        run: dotnet publish SpaceInvaders.Web/SpaceInvaders.Web.csproj -c Release -o out/SpaceInvaders.Web
+
+      - name: Publish Asteroids.Web
+        run: dotnet publish Asteroids.Web/Asteroids.Web.csproj -c Release -o out/Asteroids.Web
